--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicons/favicon.ico">
+
     <meta name="description"
         content="Implementing Salesforce to fulfil your business goals and get the traction you are looking for." />
 
