--- a/index.html
+++ b/index.html
@@ -372,9 +372,8 @@
                                         trust
                                         for taking your business through a digital transformation.</p>
                                     <div class="footer-widget__about-social">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="#"><i class="fab fa-facebook"></i></a>
-                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                        <a href="#"><i class="fab fa-linkedin"></i></a>
+
                                         <a href="#"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
@@ -480,7 +479,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@izeetak.com</a>
+                    <a href="mailto:info@softinnovas.com">info@softinnovas.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -489,9 +488,8 @@
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                 <div class="mobile-nav__social">
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-facebook-square"></a>
-                    <a href="#" class="fab fa-pinterest-p"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+
                     <a href="#" class="fab fa-instagram"></a>
                 </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
