--- a/index.html
+++ b/index.html
@@ -221,9 +221,36 @@
                                 resolutions to your problems and get your queries answered at every stage of
                                 implementation. From suggesting suitable tools to helping you troubleshoot problems, you
                                 can rely on our Salesforce consultation services to have a smooth run!</p>
+                            <div class="about-one__points-box">
+                                <ul class="about-one__points list-unstyled">
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Great communication</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Understanding issues</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Finding the best solution</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
 
-
-                            <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a>
+                            <!-- <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a> -->
                         </div>
                     </div>
                 </div>
@@ -243,8 +270,35 @@
                                 managing your customer records and providing personalized services to your clients. Our
                                 team of skilled Salesforce experts helps you in Salesforce implementation, consultation,
                                 integration, migration, and user adoption as per your needs and preferences. </p>
-
-                            <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a>
+                            <div class="about-one__points-box">
+                                <ul class="about-one__points list-unstyled">
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Great communication</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Understanding issues</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Finding the best solution</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a> -->
                         </div>
                     </div>
                     <div class="col-xl-6">
@@ -284,12 +338,43 @@
                                 <span class="section-title__tagline">Soft Innovas Study</span>
                                 <h2 class="section-title__title">Study</h2>
                             </div>
-                            <p class="about-one__text">We help you utilize the complete potential of Salesforce in
-                                managing your customer records and providing personalized services to your clients. Our
-                                team of skilled Salesforce experts helps you in Salesforce implementation, consultation,
-                                integration, migration, and user adoption as per your needs and preferences. </p>
-
-                            <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a>
+                            <p class="about-one__text">We bring technology, innovation, ideas, mentors, students, and
+                                instructors together, so learning everything with ease brings you one step closer to
+                                your next job in the salesforce industry. Our seasoned team of instructors,
+                                co-instructors, mentors, and coaches are available to help you on the go. We have
+                                additional office hours, Q&A sessions, and what we call Einstein hours to help you even
+                                get one-and-one help when needed. Once you learn everything you need to be successful,
+                                we help you find the job that best suites all your skills. We are here to close the
+                                salesforce talent gap and we trust that you are ready to let us help you get there. </p>
+                            <div class="about-one__points-box">
+                                <ul class="about-one__points list-unstyled">
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>No IT Background Necessary</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Get Certified by Salesforce</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>High Job Satisfaction</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a> -->
                         </div>
                     </div>
                 </div>
