--- a/solutions.html
+++ b/solutions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Solutions</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -49,7 +49,6 @@
     <link rel="stylesheet" href="assets/css/izeetak-responsive.css" />
 </head>
 
-
 <body>
     <div class="preloader">
         <img class="preloader__image" width="60" src="assets/images/loader.png" alt="" />
@@ -90,133 +89,111 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg"
+                style="background-image: url(assets/images/backgrounds/page-header-solutions.jpg)">
             </div>
-            <div class="page-header-bg-overly"></div>
-            <div class="page-header-shape wow slideInRight" data-wow-delay="100ms" data-wow-duration="2500ms"
-                style="background-image: url(assets/images/shapes/page-header-shape.png)"></div>
-            <div class="container">
+
+
+            <div class="container" style="opacity: 0;">
                 <div class="page-header__inner">
                     <ul class="thm-breadcrumb list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><span>/</span></li>
-                        <li>Contact</li>
+                        <li>About</li>
                     </ul>
-                    <h2>Contact</h2>
+                    <h2>About</h2>
                 </div>
             </div>
         </section>
         <!--Page Header End-->
 
-        <!--Contact Page Start-->
-        <section class="contact-page">
+        <!--About Two Start-->
+        <section class="about-two">
             <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-lg-4">
-                        <div class="contact-page__left">
+                <div class="row m-auto">
+
+                    <div class="col-xl-9 m-auto">
+                        <div class="about-two__right">
                             <div class="section-title text-left">
-                                <span class="section-title__tagline">Contact with us</span>
-                                <h2 class="section-title__title">Write Message to Company</h2>
+                                <span class="section-title__tagline">Soft Innovas Solutions</span>
+                                <h2 class="section-title__title">About Solutions</h2>
                             </div>
-                            <p class="contact-page__text">Lorem ipsum is simply free text available the market dolor sit
-                                amet, consectetur notted adipisicing elit sed do.</p>
-                            <div class="contact-page__social-list">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-facebook"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-8 col-lg-8">
-                        <div class="contact-page__right">
-                            <form action="assets/inc/sendemail.php" class="comment-one__form contact-form-validated"
-                                novalidate="novalidate">
-                                <div class="row">
-                                    <div class="col-xl-6">
-                                        <div class="comment-form__input-box">
-                                            <input type="text" placeholder="Full Name" name="name">
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-6">
-                                        <div class="comment-form__input-box">
-                                            <input type="email" placeholder="Email Address" name="email">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xl-12">
-                                        <div class="comment-form__input-box">
-                                            <textarea name="message" placeholder="Write Message"></textarea>
-                                        </div>
-                                        <button type="submit" class="thm-btn comment-form__btn">Send a message</button>
-                                    </div>
-                                </div>
-                            </form>
-                            <div class="result"></div><!-- /.result -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--Contact Page End-->
+                            <p class="about-two__text-1" style="text-align: justify;"><strong>Strategy And
+                                    Design</strong><br>
+                                As your Salesforce partner, Soft Innovas helps you in coming up with the right
+                                implementation strategy and software design. Especially if you are entering the world of
+                                cloud-based CRM for the first time, we guide you every step of the way in understanding
+                                the architecture of the platform and how it works. Rest assured that our Salesforce
+                                professionals would focus on getting you the highest possible returns on your
+                                investment.
+                                Our strategy and design services revolve around creating an ideal blueprint of your
+                                implementation plan and the CRM platform to be set up as per your requirements.
+                                Moreover, we suggest Salesforce best practices to you and recommend tools that are in
+                                sync with your business objectives.
+                                Right from need discovery and roadmap design to prototyping and technical delivery
+                                assistance, we help you chart out the best strategy and design for implementing the CRM
+                                platform.
+                                <br><br>
+                                <strong>Full-scale Implementation</strong><br>
+                                If you are willing to go all the way, we help you with full-scale Salesforce
+                                implementation according to your needs and preferences. Our certified Salesforce experts
+                                assist you in planning, designing, developing, and delivering your Salesforce
+                                implementation project the way you envision it. Whether you are willing to implement a
+                                single Salesforce Cloud or more, you can rest assured that we would bring your project
+                                to fruition.
+                                As your Salesforce partner, our full-scale implementation services include everything
+                                from need assessment and technical design to legacy data migration and third-party
+                                integrations.
+                                <br><br>
+                                <strong>Salesforce Consultation</strong><br>
+                                3 Years of experience in the industry have equipped our professionals with the tricks of
+                                the trade and nitty-gritty details about the CRM platform. Through our Salesforce
+                                consultation services, we provide personalized resolutions to your problems and get your
+                                queries answered at every stage of implementation. From suggesting suitable tools to
+                                helping you troubleshoot problems, you can rely on our Salesforce consultation services
+                                to have a smooth run!
+                                <br><br>
+                                <strong>Salesforce Integration</strong><br>
+                                Salesforce is a customizable platform and can be readily integrated with a plethora of
+                                different applications and services. As your Salesforce implementation partners, we help
+                                you with third-party integrations to enhance the overall functionality of Salesforce.
+                                Depending on the objectives you want to achieve and the users you are targeting, we help
+                                you sync your Salesforce data and business logic with suitable platforms. This would
+                                prevent your team members from switching between different platforms by providing them
+                                with a centralized interface.
 
-        <!--Contact Details End-->
-        <section class="contact-details">
-            <div class="container">
-                <div class="contact-details__inner">
-                    <div class="row">
-                        <div class="col-xl-4 col-lg-4">
-                            <div class="contact-details__single">
-                                <div class="contact-details__icon">
-                                    <span class="icon-map"></span>
-                                </div>
-                                <div class="contact-details__content">
-                                    <p class="contact-details__sub-title">Visit Us</p>
-                                    <h5>66 Road Broklyn Street, New York</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4">
-                            <div class="contact-details__single contact-details__single-2">
-                                <div class="contact-details__icon">
-                                    <span class="icon-email-1"></span>
-                                </div>
-                                <div class="contact-details__content">
-                                    <p class="contact-details__sub-title">Send Email</p>
-                                    <h4><a href="mailto:info@softinnovas.com">info@softinnovas.com</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4">
-                            <div class="contact-details__single contact-details__single-3">
-                                <div class="contact-details__icon">
-                                    <span class="icon-phone-call"></span>
-                                </div>
-                                <div class="contact-details__content">
-                                    <p class="contact-details__sub-title">Call Anytime</p>
-                                    <h4><a href="tel:926668880000">+ 92 666 888 0000</a></h4>
-                                </div>
-                            </div>
+                            </p>
+
+
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!--Contact Details End-->
+        <!--About Two End-->
 
-        <!--Google Map Start-->
-        <section class="contact-page-google-map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d175429.74710292782!2d-74.08921621529728!3d40.64292766194334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a9b3117469%3A0xd134e199a405a163!2sEmpire%20State%20Building!5e0!3m2!1sen!2sro!4v1659584370989!5m2!1sen!2sro"
-                class="contact-page-google-map__one" allowfullscreen></iframe>
+        <!--CTA One Start-->
+        <section class="cta-one ">
+            <div class="cta-one__container bg-white">
 
-
+                <div class=" container">
+                    <div class="col-lg-12">
+                        <div class="cta-one__inner">
+                            <p class="cta-one__sub-title text-dark">Let’s Get Started Now</p>
+                            <h2 class="cta-one__title text-dark">We’ll Help You Overcome Your <br> Technology
+                                Challenges</h2>
+                            <a href="contact.html" class="cta-one__btn thm-btn">Contact us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!--Google Map End-->
+        <!--CTA One End-->
+
+
 
         <!--Site Footer One Start-->
-        <footer id="footer" class="site-footer">
+        <footer class="site-footer site-footer-two">
             <div class="site-footer__top">
                 <div class="container">
                     <div class="site-footer__top-inner">
@@ -406,6 +383,8 @@
     <script src="assets/vendors/vegas/vegas.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="assets/vendors/particles/particles.min.js"></script>
+    <script src="assets/vendors/particles/particles-config.js"></script>
 
 
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyATY4Rxc8jNvDpsK8ZetC7JyN4PFVYGCGM"></script>
