--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                                 <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                                 <ul class="main-menu__list">
 
-                                    <li><a href="solutions.html">Solutions</a></li>
-                                    <li><a href="staffing.html">Staffing</a></li>
-                                    <li><a href="https://www.softinnovas.com" target="_blank">School</a></li>
+                                    <li><a href="#solutions">Solutions</a></li>
+                                    <li><a href="#staffing">Staffing</a></li>
+                                    <li><a href="#study">Study</a></li>
 
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="#footer">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -114,17 +114,13 @@
                             <div class="row">
                                 <div class="col-lg-8">
                                     <div class="main-slider__content">
-                                        <img src="assets/images/brand/brand-1-1.png" width="100%"
-                                            style="max-width: 200px;"><br><br>
                                         <h2>Reaching business goals <br> with Salesforce</h2>
                                         <p style="max-width: 600px;">Soft Innovas is a Salesforce partner you can trust
                                             for taking your business
                                             through a digital transformation. </p>
-                                        <a href="https://www.softinnovas.com" target="_blank"
-                                            class="thm-btn-school">Discover
-                                            School</a>
+                                        <img src="assets/images/brand/brand-1-1.png" width="100%"
+                                            style="max-width: 200px;">
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -175,7 +171,7 @@
                                     <span class="icon-webpage"></span>
                                 </div>
                                 <div class="feature-one__text">
-                                    <h3>School</h3>
+                                    <h3>Study</h3>
                                     <p>Lorem ipsum is simply of free text dolor.</p>
                                 </div>
                             </div>
@@ -254,7 +250,7 @@
                                 </ul>
                             </div>
 
-                            <a href="solutions.html" class="about-one__btn thm-btn mt-4">Discover More</a>
+                            <!-- <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a> -->
                         </div>
                     </div>
                 </div>
@@ -264,30 +260,16 @@
         <section class="about-one m-5" id="staffing">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-6 staff-img">
-                        <div class="about-one__left wow slideInLeft me-0" style="z-index: -1;" data-wow-delay="100ms"
-                            data-wow-duration="2500ms">
-                            <div class="about-one__img-box">
-                                <div class="about-one__img">
-                                    <img src="assets/images/resources/about-one-img-2.jpg" alt="">
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-6 staff-text">
+                    <div class="col-xl-6">
                         <div class="about-one__right">
                             <div class="section-title text-left">
                                 <span class="section-title__tagline">Soft Innovas Staffing</span>
                                 <h2 class="section-title__title">Staffing</h2>
                             </div>
-                            <p class="about-one__text">Our staffing service is comprised of well-seasoned individuals
-                                providing custom employment solutions for employees and employers. Everyone on the
-                                Salesforce Team has years of experience in their field that have proven effective in the
-                                successful placement of our employees at local companies throughout your area. We work
-                                with our employees and customers to find the right temporary, contract, or direct hire
-                                match locally or internationally. </p>
+                            <p class="about-one__text">We help you utilize the complete potential of Salesforce in
+                                managing your customer records and providing personalized services to your clients. Our
+                                team of skilled Salesforce experts helps you in Salesforce implementation, consultation,
+                                integration, migration, and user adoption as per your needs and preferences. </p>
                             <div class="about-one__points-box">
                                 <ul class="about-one__points list-unstyled">
                                     <li>
@@ -316,7 +298,18 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="staffing.html" class="about-one__btn thm-btn mt-4">Discover More</a>
+                            <!-- <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a> -->
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="about-one__left wow slideInLeft me-0" style="z-index: -1;" data-wow-delay="100ms"
+                            data-wow-duration="2500ms">
+                            <div class="about-one__img-box">
+                                <div class="about-one__img">
+                                    <img src="assets/images/resources/about-one-img-2.jpg" alt="">
+                                </div>
+
+                            </div>
                         </div>
                     </div>
 
@@ -324,7 +317,7 @@
             </div>
         </section>
 
-        <section class="about-one mt-4" id="school">
+        <section class="about-one mt-4" id="study">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6">
@@ -342,8 +335,8 @@
                     <div class="col-xl-6">
                         <div class="about-one__right">
                             <div class="section-title text-left">
-                                <span class="section-title__tagline">Soft Innovas school</span>
-                                <h2 class="section-title__title">School</h2>
+                                <span class="section-title__tagline">Soft Innovas Study</span>
+                                <h2 class="section-title__title">Study</h2>
                             </div>
                             <p class="about-one__text">We bring technology, innovation, ideas, mentors, students, and
                                 instructors together, so learning everything with ease brings you one step closer to
@@ -381,7 +374,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="school.html" class="about-one__btn thm-btn mt-4">Discover More</a>
+                            <!-- <a href="#" class="about-one__btn thm-btn mt-4">Discover More</a> -->
                         </div>
                     </div>
                 </div>
@@ -395,7 +388,7 @@
         </div>
 
         <!--Share The Joy Start-->
-        <!-- <section class="share-the-joy">
+        <section class="share-the-joy">
             <div class="share-the-joy__inner">
 
                 <div class="container">
@@ -424,7 +417,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!--Share The Joy End-->
 
 
@@ -438,7 +431,7 @@
                         <div class="cta-one__inner">
                             <p class="cta-one__sub-title">Let’s Get Started Now</p>
                             <h2 class="cta-one__title">We’ll Help You Overcome Your <br> Technology Challenges</h2>
-                            <a href="contact.html" class="cta-one__btn thm-btn">Contact us</a>
+                            <a href="contact.html" class="cta-one__btn thm-btn">Discover More</a>
                         </div>
                     </div>
                 </div>
@@ -478,9 +471,9 @@
                                     <h3 class="footer-widget__title">Links</h3>
                                     <ul class="footer-widget__links-list list-unstyled clearfix">
                                         <li><a href="#">About</a></li>
-                                        <li><a href="solutions.html">Solutions</a></li>
-                                        <li><a href="staffing.html">Staffing</a></li>
-                                        <li><a href="school.html">School</a></li>
+                                        <li><a href="about.html">Solutions</a></li>
+                                        <li><a href="news.html">Staffing</a></li>
+                                        <li><a href="project.html">Study</a></li>
                                     </ul>
 
                                 </div>
