--- a/index2.html
+++ b/index2.html
@@ -360,8 +360,7 @@
                                 </div>
                                 <div class="welcome-one__funded-content">
                                     <h3 class="welcome-one__funded-text">The IT Solutions & Services Company Funded in
-                                        <span>1987</span>
-                                    </h3>
+                                        <span>1987</span></h3>
                                 </div>
                             </div>
                             <h3 class="welcome-one__funded-name">Kevin Martin <span>Co - Founder</span></h3>
@@ -651,11 +650,9 @@
         <!--Industries We Serve Start-->
         <section class="industries-we-serve">
             <div class="industries-we-serve-shape-1 wow slideInLeft" data-wow-delay="100ms" data-wow-duration="2500ms">
-                <img class="float-bob-y" src="assets/images/shapes/industries-we-serve-shape-1.png" alt="">
-            </div>
+                <img class="float-bob-y" src="assets/images/shapes/industries-we-serve-shape-1.png" alt=""></div>
             <div class="industries-we-serve-shape-2 wow slideInRight" data-wow-delay="100ms" data-wow-duration="2500ms">
-                <img src="assets/images/shapes/industries-we-serve-shape-2.png" alt="">
-            </div>
+                <img src="assets/images/shapes/industries-we-serve-shape-2.png" alt=""></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-7 col-lg-6">
