--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="feature-one__bottom-inner">
-                                <p>IT services built specifically for your business. <a href="services.html">Find Your
+                                <p>IT services built specifically for your business. <a href="solutions.html">Find Your
                                         Solution</a>
                                 </p>
                             </div>
