--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
             </div>
         </section>
 
-        <section class="about-one m-5" id="staffing">
+        <section class="about-one mb-5 mt-5" id="staffing">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 staff-img">
-                        <div class="about-one__left wow slideInLeft me-0" style="z-index: -1;" data-wow-delay="100ms"
+                        <div class="about-one__left wow slideInLeft" style="z-index: -1;" data-wow-delay="100ms"
                             data-wow-duration="2500ms">
                             <div class="about-one__img-box">
                                 <div class="about-one__img">
