--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="feature-one__text">
                                     <h3>Solutions</h3>
-                                    <p>Lorem ipsum is simply of free text dolor.</p>
+                                    <p>3 Years of experience in the industry.</p>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                                 </div>
                                 <div class="feature-one__text">
                                     <h3>Staffing</h3>
-                                    <p>Lorem ipsum is simply of free text dolor.</p>
+                                    <p>Proven successful placement of our employees.</p>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                                 </div>
                                 <div class="feature-one__text">
                                     <h3>School</h3>
-                                    <p>Lorem ipsum is simply of free text dolor.</p>
+                                    <p>We bring mentors, students, and instructors together.</p>
                                 </div>
                             </div>
                         </div>
@@ -381,7 +381,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="school.html" class="about-one__btn thm-btn mt-4">Discover More</a>
+                            <a href="https://www.softinnovas.com" class="about-one__btn thm-btn mt-4">Discover More</a>
                         </div>
                     </div>
                 </div>
@@ -438,7 +438,7 @@
                         <div class="cta-one__inner">
                             <p class="cta-one__sub-title">Let’s Get Started Now</p>
                             <h2 class="cta-one__title">We’ll Help You Overcome Your <br> Technology Challenges</h2>
-                            <a href="contact.html" class="cta-one__btn thm-btn">Contact us</a>
+                            <a href="contact.html" class="thm-btn">Contact us</a>
                         </div>
                     </div>
                 </div>
@@ -480,7 +480,7 @@
                                         <li><a href="#">About</a></li>
                                         <li><a href="solutions.html">Solutions</a></li>
                                         <li><a href="staffing.html">Staffing</a></li>
-                                        <li><a href="school.html">School</a></li>
+                                        <li><a href="https://www.softinnovas.com">School</a></li>
                                     </ul>
 
                                 </div>
