--- a/school.html
+++ b/school.html
@@ -167,7 +167,7 @@
                                         <li><a href="#">About</a></li>
                                         <li><a href="solutions.html">Solutions</a></li>
                                         <li><a href="staffing.html">Staffing</a></li>
-                                        <li><a href="school.html">School</a></li>
+                                        <li><a href="https://www.softinnovas.com">School</a></li>
                                     </ul>
 
                                 </div>
