--- a/solutions.html
+++ b/solutions.html
@@ -182,7 +182,7 @@
                             <p class="cta-one__sub-title text-dark">Let’s Get Started Now</p>
                             <h2 class="cta-one__title text-dark">We’ll Help You Overcome Your <br> Technology
                                 Challenges</h2>
-                            <a href="contact.html" class="cta-one__btn thm-btn">Contact us</a>
+                            <a href="contact.html" class="thm-btn">Contact us</a>
                         </div>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                                         <li><a href="#">About</a></li>
                                         <li><a href="solutions.html">Solutions</a></li>
                                         <li><a href="staffing.html">Staffing</a></li>
-                                        <li><a href="school.html">School</a></li>
+                                        <li><a href="https://www.softinnovas.com">School</a></li>
                                     </ul>
 
                                 </div>
