--- a/contact.html
+++ b/contact.html
@@ -116,10 +116,10 @@
                         <div class="contact-page__left">
                             <div class="section-title text-left">
                                 <span class="section-title__tagline">Contact with us</span>
-                                <h2 class="section-title__title">Write Message to Company</h2>
+                                <h2 class="section-title__title">Don'r hesitate to drop a line to us</h2>
                             </div>
-                            <p class="contact-page__text">Lorem ipsum is simply free text available the market dolor sit
-                                amet, consectetur notted adipisicing elit sed do.</p>
+                            <p class="contact-page__text">We are happe to help you as best as we can, please let your
+                                message arrive us.</p>
                             <div class="contact-page__social-list">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
                                 <a href="#"><i class="fab fa-facebook"></i></a>
