--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
                         <div class="contact-page__left">
                             <div class="section-title text-left">
                                 <span class="section-title__tagline">Contact with us</span>
-                                <h2 class="section-title__title">Don'r hesitate to drop a line to us</h2>
+                                <h2 class="section-title__title">Don't hesitate to drop a line to us</h2>
                             </div>
                             <p class="contact-page__text">We are happe to help you as best as we can, please let your
                                 message arrive us.</p>
