--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                                 <span class="section-title__tagline">Contact with us</span>
                                 <h2 class="section-title__title">Don't hesitate to drop a line to us</h2>
                             </div>
-                            <p class="contact-page__text">We are happe to help you as best as we can, please let your
+                            <p class="contact-page__text">We are happy to help you as best as we can, please let your
                                 message arrive us.</p>
                             <div class="contact-page__social-list">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
